--- a/samTemplate.yaml
+++ b/samTemplate.yaml
@@ -7,7 +7,7 @@ Resources:
   Properties:
    Runtime: python3.9
    CodeUri: ./index-photos-copy
-   FunctionName: index-photos
+   FunctionName: index-photos-copy
    Handler: index-photos.lambda_handler
    Role: arn:aws:iam::495764083825:role/service-role/index-photos-role-5owx62da
    Policies:
@@ -21,7 +21,7 @@ Resources:
    Runtime: python3.9
    CodeUri: ./search-photos-copy
    Handler: search-photos.lambda_handler
-   FunctionName: search-photos
+   FunctionName: search-photos-copy
    Role: arn:aws:iam::495764083825:role/service-role/search-photos-role-z1jagkj1
    Policies:
     - AWSLambdaExecute
